--- a/pages/cases/template.html
+++ b/pages/cases/template.html
@@ -198,66 +198,66 @@
 		<main>
 			<section class="article">
 				<div class="article__container">
-					<aside class="article__sider">
-						<div class="article__sider-container">
-							<h1 class="article__title">Отмена судебного приказа в&nbsp;гражданском производстве</h1>
-							<a class="article__link-back" href="../news.html"><i class="article__link-back--icon icon-arrow"></i>Назад</a>
-							<ul class="article__nav">
-								<li class="article__nav-item"><a href="#description" role="navigation" tabindex="0">Описание ситуации</a></li>
-								<li class="article__nav-item"><a href="#result" role="navigation" tabindex="0">Результат</a></li>
-								<li class="article__nav-item"><a href="#feedback" role="navigation" tabindex="0">Отзыв клиента</a></li>
-							</ul>
-                            <picture class="article__cover-wrapper">
-                                <img class="article__cover" src="../../media/content/img/staff/team1.jpg" alt="#">
+					<aside>
+						<div>
+							<h1>Отмена судебного приказа в&nbsp;гражданском производстве</h1>
+							<a href="../news.html"><i class="article__link-back--icon icon-arrow"></i>Назад</a>
+							<nav>
+								<li><a href="#description">Описание ситуации</a></li>
+								<li><a href="#result">Результат</a></li>
+								<li><a href="#feedback">Отзыв клиента</a></li>
+							</nav>
+                            <picture>
+                                <img src="../../media/content/img/staff/team1.jpg" alt="#">
                             </picture>
 						</div>
 					</aside>
-					<article class="article__body">
-                        <p class="article__desc">Популярность ведения бизнеса именно таким способом возрастает, как и объем недовольств и претензий потребителей, хотя способ реализации товаров, услуг и работ именно дистанционным способом, был всегда подконтролен Роспотребнадзору.</p>
-                        <div id="description" class="article__chapter">
-                            <h2 class="article__chapter-title">Описание ситуации</h2>
-                            <p class="article__chapter-text">Предпринимательская деятельность регулируется различными нормативами правового характера. С 01.01.2019 года Закон РФ «О защите прав потребителей» (далее – «Закон») претерпел изменения и пополнился новым понятием – «владелец агрегатора информации о товарах (услугах, работах)» (далее – «владелец агрегатора»).</p>
-                            <p class="article__chapter-text">Это любой бизнес, зарегистрированный в установленном законом порядке, осуществляющий коммерческую деятельность и владеющий web-сайтом, функционал которого мог одновременно предложить потенциальным покупателям следующие возможности:</p>
-                            <ul class="article__chapter-text article__chapter-ilst">
-                                <li class="article__chapter-list-item">ознакомить и предложить заключить с компанией реализатором какой-либо Договор (купли-продажи, оказания услуг, выполнения работ);</li>
-                                <li class="article__chapter-list-item">заключить соответствующий Договор;</li>
-                                <li class="article__chapter-list-item">оплатить покупку, но непосредственно владельцу агрегатора, применяя безналичную форму расчета.</li>
+					<article>
+                        <p>Популярность ведения бизнеса именно таким способом возрастает, как и объем недовольств и претензий потребителей, хотя способ реализации товаров, услуг и работ именно дистанционным способом, был всегда подконтролен Роспотребнадзору.</p>
+                        <div id="description">
+                            <h2>Описание ситуации</h2>
+                            <p>Предпринимательская деятельность регулируется различными нормативами правового характера. С 01.01.2019 года Закон РФ «О защите прав потребителей» (далее – «Закон») претерпел изменения и пополнился новым понятием – «владелец агрегатора информации о товарах (услугах, работах)» (далее – «владелец агрегатора»).</p>
+                            <p>Это любой бизнес, зарегистрированный в установленном законом порядке, осуществляющий коммерческую деятельность и владеющий web-сайтом, функционал которого мог одновременно предложить потенциальным покупателям следующие возможности:</p>
+                            <ul>
+                                <li>ознакомить и предложить заключить с компанией реализатором какой-либо Договор (купли-продажи, оказания услуг, выполнения работ);</li>
+                                <li>заключить соответствующий Договор;</li>
+                                <li>оплатить покупку, но непосредственно владельцу агрегатора, применяя безналичную форму расчета.</li>
                             </ul>
-                            <p class="article__chapter-text">То есть, ключевым элементом, когда владелец web-сайта может быть отнесен к агрегатору, является наличие 3 вышеуказанных функций. Только в этом случае можно будет говорить о применении этих нововведений.</p>
-                            <p class="article__chapter-text">В иных обстоятельствах, правоотношения сторон будут квалифицироваться, а равно разрешаться в обычном порядке, руководствуясь главами 1, 2 и 3 Закона РФ «О защите прав потребителей», в посредством судебного органа, самостоятельно, или используя услугу представительства в суде.</p>
-                            <picture class="article__chapter-image-wrapper">
-                                <img class="article__chapter-image" src="../../media/content/img/cases/image3.jpg" alt="#">
+                            <p>То есть, ключевым элементом, когда владелец web-сайта может быть отнесен к агрегатору, является наличие 3 вышеуказанных функций. Только в этом случае можно будет говорить о применении этих нововведений.</p>
+                            <p>В иных обстоятельствах, правоотношения сторон будут квалифицироваться, а равно разрешаться в обычном порядке, руководствуясь главами 1, 2 и 3 Закона РФ «О защите прав потребителей», в посредством судебного органа, самостоятельно, или используя услугу представительства в суде.</p>
+                            <picture>
+                                <img src="../../media/content/img/cases/image3.jpg" alt="#">
                             </picture>
                         </div>
-                        <div id="result" class="article__chapter">
-                            <h2 class="article__chapter-title">Результат</h2>
-                            <p class="article__chapter-text">Рынок таких сервисов разнообразен, но, несмотря на разные названия (основные представлены ниже), суть этих площадок идентична, но с различным предназначением, а именно:</p>
-                            <p class="article__chapter-text">marketplace (маркетплейс) является платформой для электронной коммерции, где бизнес размещает информацию о своей продукции (услугах, работе);</p>
-                            <p class="article__chapter-text">Эти площадки могут и не осуществлять действия по приему оплаты в пользу третьих лиц, но при наличии данной функции, они сразу же будут подпадать под действия законодательства «об агрегаторах».</p>
-                            <div class="article__chapter-values">
-                                <ul class="article__chapter-values-item">
-                                    <li class="article__chapter-values-number">1 500 000 &#8381;</li>
-                                    <li class="article__chapter-values-text">Списанный долг</li>
+                        <div id="result">
+                            <h2>Результат</h2>
+                            <p>Рынок таких сервисов разнообразен, но, несмотря на разные названия (основные представлены ниже), суть этих площадок идентична, но с различным предназначением, а именно:</p>
+                            <p>marketplace (маркетплейс) является платформой для электронной коммерции, где бизнес размещает информацию о своей продукции (услугах, работе);</p>
+                            <p>Эти площадки могут и не осуществлять действия по приему оплаты в пользу третьих лиц, но при наличии данной функции, они сразу же будут подпадать под действия законодательства «об агрегаторах».</p>
+                            <div class="article__values">
+                                <ul>
+                                    <li>1 500 000 &#8381;</li>
+                                    <li>Списанный долг</li>
                                 </ul>
-                                <ul class="article__chapter-values-item">
-                                    <li class="article__chapter-values-number">7 месяцев</li>
-                                    <li class="article__chapter-values-text">Продолжительность судебного разбирательства</li>
+                                <ul>
+                                    <li>7 месяцев</li>
+                                    <li>Продолжительность судебного разбирательства</li>
                                 </ul>
                             </div>
                         </div>
-                        <div id="feedback" class="article__chapter">
-                            <h2 class="article__chapter-title">Отзыв клиента</h2>
+                        <div id="feedback">
+                            <h2>Отзыв клиента</h2>
                             <div class="article__chapter-video-wrapper">
                                 <video class="article__chapter-video">
                                     <source src="../../media/content/video/confused-travolta.mp4" type="video/mp4">
                                 </video>
-                                <div class="article__chapter-video-control icon-play"></div>
+                                <i class="article__chapter-video-control icon-play"></i>
                             </div>
-                            <p class="article__chapter-text">Спасибо за очень подробную и тщательную проверку. Это было не только полезно для принятия решения о покупке дома, но и содержит много полезной информации, которая сделает меня лучшим домовладельцем. Теперь я знаю, как и где обслуживать ключевые компоненты нашего нового дома, чтобы поддерживать его в отличном рабочем состоянии, еще раз спасибо.</p>
-                            <ul class="article__chapter-client">
-                                <li class="article__chapter-client-name">Бильбо Беггинс</li>
-                                <li class="article__chapter-client-post">Главный бухгалтер в ОАО «ТрансНефть»</li>
-                            </ul>
+                            <p>Спасибо за очень подробную и тщательную проверку. Это было не только полезно для принятия решения о покупке дома, но и содержит много полезной информации, которая сделает меня лучшим домовладельцем. Теперь я знаю, как и где обслуживать ключевые компоненты нашего нового дома, чтобы поддерживать его в отличном рабочем состоянии, еще раз спасибо.</p>
+                            <ol>
+                                <li>Бильбо Беггинс</li>
+                                <li>Главный бухгалтер в ОАО «ТрансНефть»</li>
+                            </ol>
                         </div>
                     </article>
 				</div>
@@ -268,7 +268,7 @@
 			</section>
             <section class="hint">
                 <div class="hint__container">
-                    <p class="hint__title">Следующая статья</p>
+                    <p class="hint__title">Следующая<br>статья</p>
                     <div class="hint__body">
                         <div class="hint__body-container">
                             <picture class="hint__image-wrapper">
