--- a/pages/service.html
+++ b/pages/service.html
@@ -194,61 +194,61 @@
 				<div class="service__container">
 					<div class="service__header">
 						<div class="service__titlebox">
-							<h1 class="service__title">Интеллектуальная собственность</h1>
-							<ul class="service__subtitle">
-								<li class="service__subtitle-item">
+							<h1>Интеллектуальная собственность</h1>
+							<ul>
+								<li>
 									Наши действия во всех случаях направлены на достижение положительного результата рассматриваемого дела, посредством прекращения производства по делу. Мы выясняем на этапе ознакомления с материалами каждого конкретного дела, ведь привлекаемое лицо не может быть признано таковым, пока не доказана его вина в полном объеме и соответствующими доказательствами.
 								</li>
-								<li class="service__subtitle-item">Поэтому, во всех случаях, мы детально подходим к существу правонарушения и перспектив того или иного спора.</li>
+								<li>Поэтому, во всех случаях, мы детально подходим к существу правонарушения и перспектив того или иного спора.</li>
 							</ul>
 						</div>
-						<div class="service__header-imagebox">
-							<picture class="service__header-image-wrapper">
-								<img class="service__header-image" src="../media/content/img/services/service4.jpg" alt="#" />
+						<div>
+							<picture>
+								<img src="../media/content/img/services/service4.jpg" alt="#" />
 							</picture>
 						</div>
 					</div>
 					<div class="service__body">
-						<div class="service__body-imagebox">
+						<aside>
 							<picture class="service__body-image-wrapper">
 								<img class="service__body-image" src="../media/content/img/services/service3.jpg" alt="#" />
 							</picture>
-						</div>
-						<div class="service__desc-container">
-							<h2 class="service__desc">Данная услуга<br />включает:</h2>
+						</aside>
+						<div>
+							<h2>Данная услуга<br />включает:</h2>
 						</div>
 						<div class="service__content">
-							<ul class="service__list">
-								<li class="service__list-item service__list-item--marked">Ознакомление с материалами дела и правовая оценка перспектив административного дела.</li>
-								<li class="service__list-item service__list-item--marked">Определение оснований для прекращения производство по делу.</li>
-								<li class="service__list-item service__list-item--marked">Подготовка процессуальной документации (жалоба на постановление об административном правонарушении).</li>
-								<li class="service__list-item service__list-item--marked">Истребование доказательств в обоснование занимаемой позиции.</li>
-								<li class="service__list-item service__list-item--marked">Непосредственное участие при рассмотрении дела в арбитражном суде или суде общей юрисдикции.</li>
-								<li class="service__list-item service__list-item--marked">Обжалование решение суда в апелляционной, кассационной, надзорной и иных инстанциях.</li>
+							<ul>
+								<li>Ознакомление с материалами дела и правовая оценка перспектив административного дела.</li>
+								<li>Определение оснований для прекращения производство по делу.</li>
+								<li>Подготовка процессуальной документации (жалоба на постановление об административном правонарушении).</li>
+								<li>Истребование доказательств в обоснование занимаемой позиции.</li>
+								<li>Непосредственное участие при рассмотрении дела в арбитражном суде или суде общей юрисдикции.</li>
+								<li>Обжалование решение суда в апелляционной, кассационной, надзорной и иных инстанциях.</li>
 							</ul>
-							<a class="service__button" href="#">Скачать прайс-лист<i class="service__button--icon icon-arrow"></i></a>
-							<ul class="service__list">
-								<li class="service__list-item service__list-item--title">Ведение дел об интеллектуальной собственности обычно связано со следующими сферами деятельности:</li>
-								<li class="service__list-item service__list-item--marked">здоровьем, санитарно-эпидемиологическим благополучием населения и общественной нравственности (глава 6);</li>
-								<li class="service__list-item service__list-item--marked">охраной собственности (глава 7);</li>
-								<li class="service__list-item service__list-item--marked">охраной окружающей среды и природопользования (глава 8);</li>
-								<li class="service__list-item service__list-item--marked">в области промышленности, строительстве и энергетике (глава 9);</li>
-								<li class="service__list-item service__list-item--marked">правонарушений на транспорте (глава 11);</li>
-								<li class="service__list-item service__list-item--marked">в области связи и информации (глава 13);</li>
-								<li class="service__list-item service__list-item--marked">финансов, налогов, и сборов, страхования, рынка ценных бумаг (глава 15);</li>
-								<li class="service__list-item service__list-item--marked">в области нарушения таможенных правил;</li>
-								<li class="service__list-item service__list-item--marked">иные споры.</li>
+							<button>Скачать прайс-лист<i class="icon-arrow"></i></button>
+							<ul>
+								<li>Ведение дел об интеллектуальной собственности обычно связано со следующими сферами деятельности:</li>
+								<li>здоровьем, санитарно-эпидемиологическим благополучием населения и общественной нравственности (глава 6);</li>
+								<li>охраной собственности (глава 7);</li>
+								<li>охраной окружающей среды и природопользования (глава 8);</li>
+								<li>в области промышленности, строительстве и энергетике (глава 9);</li>
+								<li>правонарушений на транспорте (глава 11);</li>
+								<li>в области связи и информации (глава 13);</li>
+								<li>финансов, налогов, и сборов, страхования, рынка ценных бумаг (глава 15);</li>
+								<li>в области нарушения таможенных правил;</li>
+								<li>иные споры.</li>
 							</ul>
-							<ul class="service__list">
-								<li class="service__list-item service__list-item--title">Услуга предназначена для следующих юридических лиц:</li>
-								<li class="service__list-item service__list-item--marked-number">Индивидуальных предпринимателей.</li>
-								<li class="service__list-item service__list-item--marked-number">Обществ с ограниченной ответственностью.</li>
-								<li class="service__list-item service__list-item--marked-number">Акционерных обществ.</li>
-								<li class="service__list-item service__list-item--marked-number">Товариществ с ограниченной ответственностью.</li>
-								<li class="service__list-item service__list-item--marked-number">Обществ с дополнительной ответственностью.</li>
-								<li class="service__list-item service__list-item--marked-number">Иных лиц, предусмотренных действующим законодательством.</li>
-								<li class="service__list-item service__list-item">Услуга юриста предназначена для отраслей экономики, не противоречащей действующему законодательству РФ.</li>
-							</ul>
+							<ol>
+								<li>Услуга предназначена для следующих юридических лиц:</li>
+								<li>Индивидуальных предпринимателей.</li>
+								<li>Обществ с ограниченной ответственностью.</li>
+								<li>Акционерных обществ.</li>
+								<li>Товариществ с ограниченной ответственностью.</li>
+								<li>Обществ с дополнительной ответственностью.</li>
+								<li>Иных лиц, предусмотренных действующим законодательством.</li>
+								<li>Услуга юриста предназначена для отраслей экономики, не противоречащей действующему законодательству РФ.</li>
+							</ol>
 						</div>
 					</div>
 				</div>
