--- a/pages/about.html
+++ b/pages/about.html
@@ -146,13 +146,13 @@
 		<dialog id="modal-form" class="modal-form">
 			<div class="modal-form__container">
 				<div class="modal-form__closeBtn icon-cross" tabindex="0" role="button"></div>
-				<from class="modal-form__form">
+				<from class="modal-form__form" action="" method="post">
 					<div class="modal-form__title" role="heading">Расскажите нам о&nbsp;своей проблеме</div>
 					<div class="modal-form__inputbox">
-						<input class="modal-form__input" type="text" placeholder="Ваше имя" />
-						<input class="modal-form__input" type="tel" required data-type="input-tel" placeholder="Номер телефона" />
+						<input id="form-name" class="modal-form__input" type="text" placeholder="Ваше имя" />
+						<input id="form-tel" class="modal-form__input" type="tel" required data-type="input-tel" placeholder="Номер телефона" />
 						<div class="modal-form__select select" tabindex="0" role="combobox">
-							<input id="input-service" class="modal-form__input modal-form__select-input select__input" type="text" placeholder="Услуга (опционально)" tabindex="-1" readonly />
+							<input id="form-service" class="modal-form__input modal-form__select-input select__input" type="text" placeholder="Услуга (опционально)" tabindex="-1" readonly />
 							<i class="modal-form__select-icon select__icon icon-check-mark"></i>
 							<ul class="modal-form__select-dropdown select__dropdown" role="listbox">
 								<li class="modal-form__select-item select__item" role="option" tabindex="0">Административное право</li>
@@ -167,10 +167,28 @@
 								<li class="modal-form__select-item select__item" role="option" tabindex="0">Другое...</li>
 							</ul>
 						</div>
-						<textarea class="modal-form__input modal-form__input--custom" placeholder="Опишите задачу (не обязательно)"></textarea>
+						<textarea id="form-question" class="modal-form__input modal-form__input--custom" placeholder="Опишите задачу (не обязательно)"></textarea>
 					</div>
-					<div>
-						<p class="modal-form__footnote">Отправляя запрос, вы соглашаетесь с <a class="modal-form__footnote-link" href="privacy-policy.html">политикой конфиденциальности</a></p>
+					<div class="modal-form__footer">
+						<div class="modal-form__agreement">
+							<div class="modal-form__agreement-checkbox">
+								<input type="checkbox" id="form-agreement" name="agreement" required />
+							</div>
+							<label class="modal-form__agreement-label" for="form-agreement"
+								>Согласен
+								<a class="modal-form__agreement-link" href="privacy-policy.html" target="_blank">с&nbsp;обработкой персональных данных</a>
+								<a class="modal-form__agreement-link" href="privacy-policy.html" target="_blank">и&nbsp;политикой конфиденциальности</a>
+							</label>
+						</div>
+						<div class="modal-form__agreement">
+							<div class="modal-form__agreement-checkbox">
+								<input type="checkbox" id="form-mailing" name="mailing" />
+							</div>
+							<label class="modal-form__agreement-label" for="form-mailing"
+								>Согласен получать рекламную рассылку в соответствии
+								<a class="modal-form__agreement-link" href="privacy-policy.html" target="_blank">с&nbsp;политикой</a>
+							</label>
+						</div>
 						<button class="modal-form__button" type="submit">Отправить запрос<i class="modal-form__button--icon icon-arrow"></i></button>
 					</div>
 				</from>
@@ -216,12 +234,12 @@
 							<div class="biography__image-wrapper--interaction-desc">Основатель компании</div>
 						</div>
 					</div>
-					<div class="biography__item--first-of-type">
-						<div class="biography__item-tag">История</div>
-						<ul class="biography__item-body">
-							<li class="biography__item-text--title">Биография компании</li>
+					<div class="biography__item">
+						<h3>История</h3>
+						<ol>
+							<li>Биография компании</li>
 							<li class="biography__item-text">В 1999 году мы начали свой путь, как фирма, реализующая судебную защиту неопределенного круга лиц в системе судов общей юрисдикции и&nbsp;в&nbsp;системе арбитражных судов.</li>
-						</ul>
+						</ol>
 					</div>
 					<ul class="biography__timeline">
 						<li class="biography__timeline-item">
@@ -256,9 +274,9 @@
 						</div>
 					</div>
 					<div class="biography__item">
-						<div class="biography__item-tag">Подход</div>
-						<ul class="biography__item-body">
-							<li class="biography__item-text--title">Щепетильность в&nbsp;заботе о клиенте</li>
+						<h3>Подход</h3>
+						<ul>
+							<li>Щепетильность в&nbsp;заботе о клиенте</li>
 							<li class="biography__item-text">Обработка запросов и дел клиентов требует тщательной проверки всех деталей, чтобы избежать ошибок и недоразумений.</li>
 							<li class="biography__item-text biography__item-text--marked">Индивидуальный подход: Учитывание уникальных потребностей и предпочтений каждого клиента, что требует глубокого понимания их ситуации.</li>
 							<li class="biography__item-text biography__item-text--marked">Профессионализм: Поддержание высоких стандартов качества в работе, что создает доверие между клиентом и исполнителем.</li>
@@ -266,18 +284,18 @@
 						</ul>
 					</div>
 					<div class="biography__item">
-						<div class="biography__item-tag">Команда</div>
-						<ul class="biography__item-body">
-							<li class="biography__item-text--title">Юристы, проверенные делом</li>
+						<h3>Команда</h3>
+						<ul>
+							<li>Юристы, проверенные делом</li>
 							<li class="biography__item-text">Наша команда – это эксперты, которые не просто знают законы, а понимают, как они работают в&nbsp;реальности.</li>
 							<li class="biography__item-text">Перед тем как стать частью бюро TALAN, каждый специалист проходит тщательную проверку: оцениваем не только профессиональные знания, но и умение работать с нестандартными ситуациями, защищать интересы клиентов и брать на себя ответственность.</li>
 							<li class="biography__item-text">Мы работаем не ради формальностей, а ради результата.</li>
 						</ul>
 					</div>
 					<div class="biography__item">
-						<div class="biography__item-tag">за пределами работы</div>
-						<ul class="biography__item-body">
-							<li class="biography__item-text--title">Как мы путешествуем и&nbsp;отдыхаем</li>
+						<h3>за пределами работы</h3>
+						<ul>
+							<li>Как мы путешествуем и&nbsp;отдыхаем</li>
 							<li class="biography__item-text">Когда удается выделить свободные от работы дни, мы путешествуем, играем в шахматы и ходим в&nbsp;гольф-клуб.</li>
 						</ul>
 					</div>
@@ -325,99 +343,99 @@
 						<div class="docs__slider swiper">
 							<div class="docs__slider-wrapper swiper-wrapper">
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Договор-оферта аренды</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Договор поставки</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Соглашение о&nbsp;конфиденциальности данных</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Пользовательское соглашение</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 
 								<div class="docs__slide swiper-slide">
-									<div class="docs__slide-wrapper">
+									<a class="docs__slide-wrapper" href="../media/content/img/services/service2.jpg" data-fancybox="about-docs">
 										<p class="docs__slide-title">Патент на&nbsp;юридическую деятельность</p>
 										<div class="docs__slide-icon icon-doc"></div>
-										<a href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</a>
-									</div>
+										<div href="#" class="docs__slide-link"><i class="icon-see"></i>Смотреть</div>
+									</a>
 								</div>
 							</div>
 						</div>
@@ -605,7 +623,7 @@
 			</section>
 			<section class="connection">
 				<div class="connection__container">
-					<h2 class="connection__title">всегда готовы<br>помочь</h2>
+					<h2 class="connection__title">всегда готовы<br />помочь</h2>
 					<div class="connection__body">
 						<p class="connection__subtitle">Свяжитесь с нами любым удобным для вас способом</p>
 						<ul class="connection__linksbox">
@@ -660,10 +678,12 @@
 			</div>
 		</footer>
 		<script src="../js/libs/swiper.min.js"></script>
+		<script src="../js/libs/fancybox.umd.js"></script>
 		<script src="../js/components/numberMask.js"></script>
 		<script src="../js/components/modals.js"></script>
 		<script src="../js/components/select.js"></script>
 		<script src="../js/pages/about/docsSlider.js"></script>
+		<script src="../js/pages/about/docsGallery.js"></script>
 		<script src="../js/pages/about/newsSlider.js"></script>
 	</body>
 </html>
