--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 							<button class="intro__slogan-button" data-form-open>Получить консультацию<i class="intro__slogan-button--icon icon-arrow"></i></button>
 						</div>
 						<div class="intro__videobox">
-							<a class="intro__video-wrapper" href="#">
+							<a class="intro__video-wrapper" href="./media/content/video/confused-travolta.mp4" data-fancybox="index-video"  type="video/mp4">
 								<video class="intro__video" muted autoplay loop playsinline>
 									<source src="media/content/video/confused-travolta.mp4" type="video/mp4" />
 								</video>
@@ -751,11 +751,13 @@
 			</div>
 		</footer>
 		<script src="./js/libs/leaflet.js"></script>
+		<script src="./js/libs/fancybox.umd.js"></script>
 		<script src="./js/components/numberMask.js"></script>
 		<script src="./js/components/modals.js"></script>
 		<script src="./js/components/select.js"></script>
 		<script src="./js/pages/index/servicesSwitcher.js"></script>
 		<script src="./js/pages/index/casesFilter.js"></script>
 		<script src="./js/pages/index/casesMap.js"></script>
+		<script src="./js/pages/index/heroGallery.js"></script>
 	</body>
 </html>
